// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 dbWmSj"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 cerkKw"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 dNBrob"
      >
        <input
          className="Input-qkdgvx-0 UWiRx"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 cfGnlh"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 eyHiym"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 dNBrob"
      >
        <input
          className="Input-qkdgvx-0 koSftn"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 dbWmSj"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 cerkKw"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 dNBrob"
      >
        <input
          className="Input-qkdgvx-0 UWiRx"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 dbWmSj"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 cerkKw"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 dNBrob"
      >
        <input
          className="Input-qkdgvx-0 UWiRx"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 dbWmSj"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 cerkKw"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 dNBrob"
      >
        <input
          className="Input-qkdgvx-0 UWiRx"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 dbWmSj"
          placeholder="medium"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 cerkKw"
          placeholder="large"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 dNBrob"
      >
        <input
          className="Input-qkdgvx-0 dXOyXw"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 dgHfMu"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 hYRdse"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 cYEpSB"
      >
        <input
          className="Input-qkdgvx-0 bRxOWJ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 ihGsfO"
      >
        <input
          className="Input-qkdgvx-0 UWiRx"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 errgsq"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
